fix title sie on small devices

--- a/src/index.css
+++ b/src/index.css
@@ -199,3 +199,9 @@ code {
     -webkit-text-fill-color: transparent;
 
 }
+
+@media only screen and (max-width: 1200px) {
+    .mega-title {
+        font-size: 4.5rem;
+    }
+}
